fix rating wrap

--- a/src/client/social-gifts/ShopObjectCard/ShopObjectCard.less
+++ b/src/client/social-gifts/ShopObjectCard/ShopObjectCard.less
@@ -18,6 +18,10 @@
     width: calc((100% - 30px) / 3);
   }
 
+  .RatingsWrap {
+    width: 100%;
+  }
+
   &__affiliatLinks {
     display: flex;
     flex-wrap: wrap;
